[package]
name = "flight_datafusion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow.workspace = true
datafusion.workspace = true
futures.workspace = true
async-trait.workspace = true
r2d2.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
flight_client = { path = "../flight_client" }
