[package]
description = "Spice OSS Flight Query Repl"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "flightrepl"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ansi_term = "0.12.1"
arrow-flight = { workspace = true, features = ["flight-sql-experimental"] }
arrow-json.workspace = true
clap.workspace = true
datafusion.workspace = true
futures.workspace = true
llms = { path = "../llms" }
prost = { version = "0.12.1", default-features = false, features = [
  "prost-derive",
] }
reqwest.workspace = true
rustyline = "13.0.0"
serde_json.workspace = true
tonic = { workspace = true, features = ["transport", "tls", "tls-roots"] }
