[package]
name = "flightsql_datafusion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
arrow.workspace = true
arrow-flight.workspace = true
async-stream.workspace = true
datafusion.workspace = true
futures.workspace = true
async-trait.workspace = true
r2d2.workspace = true
snafu.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
flight_client = { path = "../flight_client" }
sql_provider_datafusion = { path = "../sql_provider_datafusion" }
