[package]
name = "llms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu.workspace = true

dirs = "5.0.1"
serde_json.workspace = true
async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
tokio.workspace = true

tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tokenizers = {version= "0.19.1"}
hf-hub = { version = "0.3.0", features = ["tokio"] }

## `candle` feature packages
candle-core = {version= "0.5.0", optional = true}
candle-examples = {version= "0.5.0", optional = true}
candle-transformers = {version= "0.5.0", optional = true}

## `mistralrs` feature packages
mistralrs = { git = "https://github.com/spiceai/mistral.rs", rev = "2f3469c52cea2167d4c5ed32623b879001ab4a4d", optional=true }
mistralrs-core = { git = "https://github.com/spiceai/mistral.rs", rev = "2f3469c52cea2167d4c5ed32623b879001ab4a4d", optional=true, package="mistralrs-core" }
candle-core-rs = { package="candle-core", git = "https://github.com/spiceai/candle.git", rev = "38f8d9e01f8684d4fa4ee171bdde3f1a89f41c54", optional=true }
tei_core = { package="text-embeddings-core", git="https://github.com/spiceai/text-embeddings-inference.git", rev="dde326b330ecb609201110d4725928a6e977f0dd" }
tei_backend_core = { package="text-embeddings-backend-core",  git="https://github.com/spiceai/text-embeddings-inference.git", rev="dde326b330ecb609201110d4725928a6e977f0dd" }
tei_candle = { package="text-embeddings-backend-candle",  git="https://github.com/spiceai/text-embeddings-inference.git", rev="dde326b330ecb609201110d4725928a6e977f0dd" }
rand = "0.8.5"
tempfile = "3.10.1"

[features]
default = ["candle"]
candle = ["dep:candle-core", "dep:candle-examples", "dep:candle-transformers"]
mistralrs = ["dep:mistralrs", "dep:candle-core-rs", "dep:mistralrs-core" ]
metal = [] # "mistralrs-core/metal"
