[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "llms"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu.workspace = true

async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true

futures = { workspace = true }
hf-hub = { version = "0.3.0", features = ["tokio"] }
serde = { workspace = true, features = ["derive"] }
tokenizers = { version = "0.19.1" }
tracing.workspace = true
tracing-futures.workspace = true

## `candle` feature packages
candle-core = { version = "0.5.0", optional = true }
candle-examples = { version = "0.5.0", optional = true }
candle-transformers = { version = "0.5.0", optional = true }
mistralrs = { git = "https://github.com/spiceai/mistral.rs", rev = "cfc0fa7ffaed0ca71cf86caff4dbd950d08626d8", optional = true }
mistralrs-core = { git = "https://github.com/spiceai/mistral.rs", rev = "cfc0fa7ffaed0ca71cf86caff4dbd950d08626d8", optional = true, package = "mistralrs-core" }
rand = "0.8.5"
tei_backend_core = { package = "text-embeddings-backend-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "dde326b330ecb609201110d4725928a6e977f0dd" }
tei_candle = { package = "text-embeddings-backend-candle", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "dde326b330ecb609201110d4725928a6e977f0dd" }
tempfile = "3.10.1"
indexmap = "2.3.0"
either = "1.13.0"

[features]
candle = ["dep:candle-core", "dep:candle-examples", "dep:candle-transformers"]
default = ["candle", "mistralrs"]
metal = []
mistralrs = ["dep:mistralrs", "dep:mistralrs-core"]
