[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "llms"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu.workspace = true

async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true

futures = { workspace = true }
hf-hub = { version = "0.3.0", features = ["tokio"] }
serde = { workspace = true, features = ["derive"] }
tokenizers = { version = "0.20.0" }
tracing.workspace = true
tracing-futures.workspace = true

## For Chunking
text-splitter = {version =  "0.16.1", features = ["markdown", "tokenizers", "tiktoken-rs"]}
pulldown-cmark = "0.12.1"
tiktoken-rs = "0.5.9"

## `candle` feature packages
mistralrs = { git = "https://github.com/spiceai/mistral.rs", rev = "60e9375b6049eead77cbda7cb3d3d83187f501a2", optional = true }
mistralrs-core = { git = "https://github.com/spiceai/mistral.rs", rev = "60e9375b6049eead77cbda7cb3d3d83187f501a2", optional = true, package = "mistralrs-core" }
rand = "0.8.5"
tei_backend_core = { package = "text-embeddings-backend-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "afbb039cc50354e9c591d9126d08c1647429151d" }
tei_candle = { package = "text-embeddings-backend-candle", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "afbb039cc50354e9c591d9126d08c1647429151d" }
tempfile = "3.13.0"
indexmap = "2.3.0"
either = "1.13.0"

[features]
default = ["mistralrs"]
metal = []
mistralrs = ["dep:mistralrs", "dep:mistralrs-core"]
