[package]
name = "model_components"
description = "Downloading, loading and using models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secrets = { path = "../secrets" }
spicepod = { path = "../spicepod" }
arrow.workspace = true
async-trait.workspace = true
serde.workspace = true
snafu.workspace = true
tracing.workspace = true
dirs = "5.0.1"
ndarray = "0.15.3"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.1"
tract-core = "0.21.0"
tract-onnx = "0.21.0"


[features]
full = []