[package]
description = "Downloading, loading and using models"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "model_components"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
arrow.workspace = true
async-trait.workspace = true
dirs = "5.0.1"
ndarray = "0.16.1"
regex = "1.10.3"
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
spicepod = { path = "../spicepod" }
tracing.workspace = true
tract-core = "0.21.0"
tract-onnx = "0.21.0"

[features]
full = []
dev = []