[package]
name = "ns_lookup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
trust-dns-resolver = "0.23.2"
tracing.workspace = true
snafu.workspace = true