[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "ns_lookup"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
snafu.workspace = true
tracing.workspace = true
trust-dns-resolver = "0.23.2"
url = "2.5.0"
