[package]
name = "pg_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The PostgreSQL compatible access layer for Spice"

[dependencies]
snafu.workspace = true
futures.workspace = true
tracing.workspace = true
metrics.workspace = true
datafusion.workspace = true
async-trait.workspace = true
tokio.workspace = true
pg_server = { path = "../runtime"}
pgwire = "0.22"
chrono = { version = "0.4.38" }

[features]
default = []
