[package]
name = "secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Spice secrets"

[dependencies]
snafu.workspace = true
spicepod = { path = "../spicepod" }
tracing.workspace = true
dirs = "5.0.1"
toml = "0.8.8"
serde.workspace = true
serde_json = "1.0.1"
ndarray = "0.15.3"
ndarray-npy = { version = "0.8.0", features = [ "compressed_npz" ] }
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
async-trait.workspace = true
base64 = "0.22.0"
keyring = { version = "2.3.2", optional = true }
secrecy = "0.8.0"