[package]
name = "secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Spice secrets"

[dependencies]
snafu.workspace = true
spicepod = { path = "../spicepod" }
tracing.workspace = true
dirs = "5.0.1"
toml = "0.8.8"
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.11.24", features = ["json"] }
async-trait.workspace = true
base64 = "0.22.0"
keyring = { version = "2.3.2", optional = true }
secrecy = "0.8.0"
aws-config = { version = "1.1.10", optional = true}
aws-sdk-secretsmanager = { version = "1.21.0", optional = true }
aws-sdk-sts = { version = "1.19.0", optional = true }

[features]
default = ["keyring-secret-store", "aws-secrets-manager"]
keyring-secret-store = ["dep:keyring"]
aws-secrets-manager = ["dep:aws-config", "dep:aws-sdk-secretsmanager", "dep:aws-sdk-sts" ]
