[package]
name = "spice-cloud"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
tracing.workspace = true
tokio.workspace = true
snafu.workspace = true
async-trait.workspace = true
datafusion.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.11.24", features = ["json"] }
runtime = { path = "../runtime" }
spicepod = { path = "../spicepod" }
