[package]
name = "spiceai-extension"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
tracing.workspace = true
tokio.workspace = true
snafu.workspace = true
async-trait.workspace = true
runtime = { path = "../runtime" }
secrets = { path = "../secrets" }
