[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "spicepod"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
tracing.workspace = true
