[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "spicepod"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
schemars = { version = "0.8.19", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
serde-value = "0.7.0"
snafu.workspace = true
tracing.workspace = true
humantime.workspace = true

[features]
default = []
schemars = ["dep:schemars"]
