[package]
name = "sql_provider_datafusion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckdb = { workspace = true,  features = ["bundled", "r2d2", "vtab", "vtab-arrow"] }
datafusion.workspace = true
async-trait.workspace = true
r2d2.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
r2d2_postgres.workspace = true
postgres.workspace = true
arrow-flight = { workspace = true, features = ["flight-sql-experimental"] }
tonic = { workspace = true, default-features = false, features = [
  "transport",
  "tls",
  "tls-roots",
] }
futures.workspace = true
arrow-schema = "49.0.0"
arrow.workspace = true
async-stream.workspace = true
datafusion-common = "36.0.0"
futures-util = "0.3.30"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
