[package]
name = "sql_provider_datafusion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion.workspace = true
async-trait.workspace = true
arrow.workspace = true
r2d2.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
db_connection_pool = { path = "../db_connection_pool" }
datafusion-federation = { workspace = true }
datafusion-federation-sql = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
duckdb = { workspace = true, features = ["bundled", "r2d2", "vtab", "vtab-arrow"] }
db_connection_pool = { path = "../db_connection_pool", features = ["duckdb"] }
pgtemp = "0.3.0"
secrecy.workspace = true

[features]
postgres = ["db_connection_pool/postgres"]
sqlite = ["db_connection_pool/sqlite"]
mysql = ["db_connection_pool/mysql"]