[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "sql_provider_datafusion"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow.workspace = true
async-trait.workspace = true
datafusion.workspace = true
datafusion-federation = { workspace = true }
datafusion-federation-sql = { workspace = true }
db_connection_pool = { path = "../db_connection_pool" }
futures.workspace = true
r2d2.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
db_connection_pool = { path = "../db_connection_pool", features = ["duckdb"] }
duckdb = { workspace = true, features = [
  "bundled",
  "r2d2",
  "vtab",
  "vtab-arrow",
] }
secrecy.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
mysql = ["db_connection_pool/mysql"]
postgres = ["db_connection_pool/postgres"]
sqlite = ["db_connection_pool/sqlite"]
