[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "telemetry"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow.workspace = true
async-trait.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
otel-arrow = { path = "../otel-arrow" }
tokio.workspace = true
tracing.workspace = true

[features]
anonymous_telemetry = []