[package]
name = "util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
humantime = "2.1.0"
tokio = { workspace = true }
tracing = { workspace = true }
backoff= "0.4.0"
rand = "0.8.5"