[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "util"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
humantime = "2.1.0"
rand = "0.8.5"
tokio = { workspace = true }
tracing = { workspace = true }
