[package]
name = "spicepodschema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Spice OSS Spicepod schema"

[dependencies]
schemars = "0.8.19"
serde_json = "1.0.117"
spicepod = { path = "../../crates/spicepod", features = ["schemars"]}
