[package]
description = "Spice OSS Spicepod schema"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "spicepodschema"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
schemars = "0.8.19"
serde_json = "1"
spicepod = { path = "../../crates/spicepod", features = ["schemars"] }
